# devilutionX-android

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
SDL2/: CMakeLists.txt  build.gradle
SDL2/src/filesystem/android/: SDL_sysfilesystem.c
SDL2_gfx/: CMakeLists.txt
SDL2_image/: CMakeLists.txt
SDL2_mixer/: CMakeLists.txt
SDL2_ttf/: CMakeLists.txt
app/: build.gradle
app/libs/libsodium-jni-aar-2.0.2/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/org/diasurgical/devilutionx/: DevilutionXSDLActivity.java  MainActivity.java
app/src/main/java/org/kkszysiu/devilutionx/: MainActivity.java
app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java
app/src/main/java/rocks/georgik/sdlapp/: DevilutionXSDLActivity.java  SDLActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
